[package]
name = "load-generator-application"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ldg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
load-generator-common = { path = "../load-generator-common" }