[package]
name = "load-generator"
version = "0.1.0"
edition = "2021"
authors = ["Will Cygan <wcygan.io@gmail.com>"]
description = "A tool to send load to a server."
categories = ["network-programming"]
keywords = ["network-programming"]
repository = "https://github.com/wcygan/load-generator"
homepage = "https://github.com/wcygan/load-generator"
license = "MIT"

[[bin]]
name = "ldg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
load-generator-common = { path = "../load-generator-common" }